--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
        display: flex;
        flex-direction: column;
        margin-top: 150px;
+       border: 2px solid rgba(248, 242, 242, 0.381);
+       box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.785);
     }
        body{
         background-image: url(./todo-pic.jpg);
@@ -27,11 +29,11 @@
     }
     h1{
         text-align: center;
-        font-size: 50px;
+        font-size: 80px;
     }
     .textt{
-        height: 30px;
-        width: 200px;
+        height: 50px;
+        width: 300px;
         border-radius:15px ;
         border: none;
     }
@@ -41,10 +43,20 @@
         border-radius: 15px;
         border: none;
         font-size: 20px;
+        color: aliceblue;
+        background-color: black;
+    }
+    .submitt:hover{
+        background-color: transparent;
+        color: rgb(22, 20, 20);
+        border: 2px solid ;
     }
     ::placeholder{
         font-size: 20px;
         justify-content: center;
+        color: rgb(81, 79, 79);
+        align-items: center;
+        padding-left: 30px;
     }
 </style>
 <body>
@@ -52,7 +64,7 @@
     <div class="aaaaaa">
 <h1>ToDo</h1>
  <form>
-    <input type="text" placeholder="enter to do list" required class="textt">
+    <input type="text" placeholder="enter to do list" required class="textt"> <br><br>
     <input type="submit" class="submitt">
  </form>
 
